--- a/app/views/refinery/pages/home.html.erb
+++ b/app/views/refinery/pages/home.html.erb
@@ -6,7 +6,7 @@
             <img src="/assets/banner/crowdsourced.jpg" alt=""/>
             <div class="buttons">
                 <a class="get-started" href="/contact"><span><span>GET STARTED</span></span></a>
-                <a class="learn-more" href="/how-it-works-clients">Or Learn More</a>
+                <a class="learn-more" href="/how-it-works">Or Learn More</a>
             </div>
         </div>
         <div class="banner-unit compete-code-win-banner hide member-res res">
@@ -42,9 +42,9 @@
             <div class="span6">
                 <div class="title"><h1>HOW IT WORKS</h1></div>
                 <ul>
-                    <li><a href="/how-it-works-clients"><span><i class="icon-outsourced"></i></span>Outsourced<br/>Developemnt</a></li>
-                    <li><a href="/how-it-works-clients"><span><i class="icon-cloud"></i></span>Cloud<br/>Technologies</a></li>
-                    <li><a href="/how-it-works-clients"><span><i class="icon-team"></i></span>Team<br/>Augmentation</a></li>
+                    <li><a href="/how-it-works"><span><i class="icon-outsourced"></i></span>Outsourced<br/>Developemnt</a></li>
+                    <li><a href="/how-it-works"><span><i class="icon-cloud"></i></span>Cloud<br/>Technologies</a></li>
+                    <li><a href="/how-it-works"><span><i class="icon-team"></i></span>Team<br/>Augmentation</a></li>
                 </ul>
             </div>
         </div>
