--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -72,44 +72,32 @@
                     <div class="stat">
                         <div class="place">
                             <span class="label">1st Places</span>
-                            <span class="count count1" data-count="24">
+                            <span class="count count1" data-count="<%= @member.total_1st_place %>">
                             </span>
-                            <span>24x</span>
+                            <span><%= @member.total_1st_place %></span>
                         </div>
                         <div class="place">
                             <span class="label">2nd Places</span>
-                            <span class="count count2" data-count="6">
+                            <span class="count count2" data-count="<%= @member.total_2nd_place %>">
                             </span>
-                            <span>6x</span>
+                            <span><%= @member.total_2nd_place %></span>
                         </div>
                         <div class="place">
                             <span class="label">3rd Places</span>
-                            <span class="count count3" data-count="10">
+                            <span class="count count3" data-count="<%= @member.total_3st_place %>">
                             </span>
-                            <span>10x</span>
+                            <span><%= @member.total_3st_place %></span>
                         </div>
                     </div>
                     <div class="stat">
-                        <p>
-                            Contest Entered: <strong>56</strong>
-                        </p>
-                        <p>
-                            TotalPoints: <strong>21600</strong>
-                        </p>
-                        <p>
-                            Total Money: <strong>$12,600</strong>
-                        </p>
+                        <p>Contest Entered: <strong><%= @member.challenges_entered %></strong></p>
+                        <p>Total Points: <strong><%= number_with_delimiter(@member.total_points, :delimiter => ',') %></strong></p>
+                        <p>Total Money: <strong><%= number_to_currency(@member.total_public_money, :precision => 0) %></strong></p>
                     </div>
                     <div class="stat">
-                        <p>
-                            Points: <strong>15,200</strong>
-                        </p>
-                        <p>
-                            Mobile Points: <strong>0</strong>
-                        </p>
-                        <p>
-                            SFDC Points: <strong>00</strong>
-                        </p>
+                        <p>Valid Submissions: <strong><%= @member.valid_submissions %></strong></p>
+                        <p>Submits: <strong><%= @member.percent_submitted %>% when registered</strong></p>
+                        <p>Total Wins: <strong><%= @member.total_wins %></strong></p>
                     </div>
                 </div>
 
@@ -205,14 +193,16 @@
                      <%= render partial: "challenges_sidebar", locals: {challenges: @active_challenges} %>
                 </div>
 
-                <h2><%= pluralize(@past_challenges.count, "PAST CHALLENGE").upcase %></h2>
+                <h2><%= pluralize(@total_past_challenges, "PAST CHALLENGE").upcase %></h2>
                 <div class="content">
                      <%= render partial: "challenges_sidebar", locals: {challenges: @past_challenges} %>
                 </div>
 
-                <div class="content total-link">
+                <%= will_paginate @past_challenges, :inner_window => 1, :outer_window => 1 %>
+
+                <!-- <div class="content total-link">
                     <a href="#" class="title-link">View All Past Challenges</a>
-                </div>
+                </div>-->
 
                 <h2>53 PAST CHALLENGES</h2>
                 <div class="content">
