--- a/app/views/members/community.html.erb
+++ b/app/views/members/community.html.erb
@@ -34,16 +34,20 @@
                     <%= prize.place %> Place <strong><%= prize.prize %></strong><br/>
                     <% end %>
                 </p>
-                <p>Due in 36h 2m | Ends December 20, 2012 at 7:30 PM<br/>
-                    16 members participating, 9 registered
+                <% distance = Time.at(@featured_challenge.end_date - Time.zone.now) %>
+                <p><%= "Due in #{distance.day}d #{distance.hour}h #{distance.min}m" %> | Ends <%= @featured_challenge.end_date.strftime("%B %d, %Y at %H:%M %p") %><br/>
+                    <%= pluralize(@featured_challenge.participating_members, 'member') %> participating, <%= @featured_challenge.registered_members %> registered
                 </p>
-                <p>Tags: <a href="#">Salesforce</a> | <a href="#">jQuery Mobile</a> | <a href="#">Android</a> | <a href="#">QuickQuizzes</a></p>
+                <p>Platforms: <%= platform_display(@featured_challenge) %><br/>
+                Tags: <%= technology_tag_links(@featured_challenge) %></p>
             </div>
             <div class="span6">
                 <div class="title"><h1>ACTIVE CHALLENGES</h1></div>
                 <% @open_challenges[1..3].each do |challenge| %>
                 <%= link_to "#{number_to_currency(challenge.total_prize_money, :precision => 0)} - #{challenge.name}", challenge_path(challenge) %>
-                <p>due in 4h 10m | 8 members participating, 5 registered</p>
+                <% distance = Time.at(challenge.end_date - Time.zone.now) %>
+                <p><%= "due in #{distance.day}d #{distance.hour}h #{distance.min}m" %> | <%= pluralize(challenge.participating_members, 'member') %> participating, <%= challenge.registered_members %> registered<br/>
+                <%= platform_and_technology_tag_links(challenge) %></p>
                 <% end %>
                 <%= link_to "View All Active Challenges", challenges_path %>
             </div>
