--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -193,16 +193,14 @@
                      <%= render partial: "challenges_sidebar", locals: {challenges: @active_challenges} %>
                 </div>
 
-                <h2><%= pluralize(@total_past_challenges, "PAST CHALLENGE").upcase %></h2>
+                <h2><%= pluralize(@past_challenges.count, "PAST CHALLENGE").upcase %></h2>
                 <div class="content">
-                     <%= render partial: "challenges_sidebar", locals: {challenges: @past_challenges} %>
+                     <%= render partial: "challenges_sidebar", locals: {challenges: @past_challenges[1..3]} %>
                 </div>
 
-                <%= will_paginate @past_challenges, :inner_window => 1, :outer_window => 1 %>
-
-                <!-- <div class="content total-link">
-                    <a href="#" class="title-link">View All Past Challenges</a>
-                </div>-->
+                <div class="content total-link">
+                    <a href="/members/<%= @member.name %>/past-challenges" class="title-link">View All Past Challenges</a>
+                </div>
 
                 <h2>53 PAST CHALLENGES</h2>
                 <div class="content">
