--- a/app/views/challenges/show.html.erb
+++ b/app/views/challenges/show.html.erb
@@ -24,18 +24,54 @@
           <p> <%= @challenge.additional_info.try(:html_safe) %> </p>
         <% end %>
 
-        <br/><br/>
-
-        <div class="btn-group-vertical">
-          <%= link_to content_tag(:span, "REGISTER FOR CHALLENGE"), challenge_path(@challenge), class: "btn" %>
-          <%= link_to content_tag(:span, "ADD TO MY WATCH LIST"), challenge_path(@challenge), class: "btn" %>
-        </div>
+        <br/>
 
         <h2 class="discussion">DISCUSSION</h2>
         <%= render partial: "discussions", locals: {challenge: @challenge} %>
       </div>
 
       <div class="span4">
+
+        <% unless @challenge.challenge_type.eql?("Info Only - No Registration") %>
+        <h2>GET STARTED</h2>
+
+          <p>
+          <% if @current_member_participant.submitted? %>
+              <% if user_signed_in? %>
+                <%= link_to content_tag(:span, "VIEW YOUR SUBMISSION"), register_challenge_path(@challenge), class: "btn" %>
+              <% end %>
+          <% elsif @challenge.open? %>   
+            <div>
+            <% if user_signed_in? %>
+              <% if !@current_member_participant.registered? && !@challenge.closed_for_registration? %>
+                <%= link_to content_tag(:span, "REGISTER"), register_challenge_path(@challenge), class: "btn" %>
+                <%= link_to content_tag(:span, "ADD TO WATCH LIST"), challenge_path(@challenge), class: "btn" %>
+                <br/><br/>
+                We may also periodically contact registered members to provide them with challenge specific information, obtain feedback or additional input. You are not obligated to submit an entry however, we highly recommend that you register for this challenge if you have any interested in participating or would simply like to stay informed.
+
+              <% elsif @current_member_participant.status.eql?('Watching') && !@challenge.closed_for_registration? %>
+                <%= link_to content_tag(:span, "REGISTER"), register_challenge_path(@challenge), class: "btn" %>
+                <br/><br/>
+                Being registered for a challenge will allow you to receive all comments posted to the discussion board plus we may periodically contact registered members to provide them with challenge specific information, obtain feedback or additional input. You are not obligated to submit an entry.
+
+              <% elsif @current_member_participant.registered? %>
+                <%= link_to content_tag(:span, "SUBMIT YOUR ENTRY"), register_challenge_path(@challenge), class: "btn" %>
+              <% end %>                    
+            <% else %>
+                <strong>Please login to submit for this challenge.</strong>
+            <% end %>
+            </div>
+          <% end %>
+
+        </p>
+        <% end %>
+
+        <h2>ADMINISTRATION</h2>
+        <p>
+          <a href="#">View submissions</a><br/>
+          <a href="#">Edit this challenge</a>
+        </p>
+
         <h2>TECHNOLOGIES</h2>
         <p>
           <%= platform_and_technology_tag_links(@challenge) %>
@@ -63,6 +99,9 @@
 
         <h2>PARTICIPATION</h2>
         <p>
+          <% if user_signed_in? %>
+          Your status: <%= @current_member_participant.status %><br/>
+          <% end %>
           <%= link_to pluralize(@challenge.participating_members, 'member'), "#" %> participating<br/>
           <%= link_to pluralize(@challenge.registered_members, 'member'), "#" %> registered
         </p>
