--- a/app/views/challenges/_comment.html.erb
+++ b/app/views/challenges/_comment.html.erb
@@ -3,7 +3,7 @@
     <%= image_tag comment.member.profile_pic %>
   </div>
   <div class="main">
-    <div class="text"> <%= comment.comment %> </div>
+    <div class="text"> <%= raw(comment.comment) %> </div>
     <div class="info">
       <span class="name"><%= comment.member.name %></span>,
       <span class="time"><%= comment.createddate.strftime("%b %d, %Y at %H:%M %p") %></span>
