--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,7 @@
 
   <!-- LOGINBAR
           ================================================== -->
+  <a name="login"></a> 
   <div class="loginbar-wrapper">
       <div class="container">
         <% if current_user.nil? %>
