--- a/app/views/challenges/_new_comment.html.erb
+++ b/app/views/challenges/_new_comment.html.erb
@@ -4,7 +4,7 @@
     <%= hidden_field_tag "comment[membername]", current_user.username %>
     <%= hidden_field_tag "comment[reply_to]", params[:reply_to] if params[:reply_to] %>
 
-    <%= text_area_tag "comment[comments]", flash[:unsaved_comments], placeholder: "Press SHIFT-ENTER for a line break. Max 2000 characters." %>
+    <%= text_area_tag "comment[comments]", flash[:unsaved_comments], placeholder: "Max 2000 characters with support for line breaks." %>
     <%= recaptcha_tags %>
     <%= submit_tag "Post Comment", class: "btn" %>
   <% end %>
