--- a/app/views/challenges/index.html.erb
+++ b/app/views/challenges/index.html.erb
@@ -11,7 +11,7 @@
                         <label>SHOW</label>
                         <%= select_tag "filters[platform]", options_for_select(Platform.names, filters[:platform]), prompt: "All Platforms" %>
                         <%= select_tag "filters[technology]", options_for_select(Technology.names, filters[:technology]), prompt: "All Technologies" %>
-                        <%= select_tag "filters[category]", options_for_select(Category.names, filters[:caterogy]), prompt: "All Categories" %>
+                        <%= select_tag "filters[category]", options_for_select(Category.names, filters[:category]), prompt: "All Categories" %>
 
                         <label>SORT BY</label>
                         <% options = [["Challenge Title", "name"]]%>
@@ -27,25 +27,28 @@
                 </script>
             </div><br/>
 
-            <% @challenges.in_groups_of(2, false) do |row_challenges| %>
-            <div class="row-fluid">
-            <% for c in row_challenges %>                
-                <div class="span6">
-                    <div class="challenge well well-large">
-                        <h3><%= link_to c.name, challenge_path(c)  %></h3>
-                        Due in <%= pluralize(c.days_till_close, 'day') %><br>
-                        <%= pluralize(c.participating_members, 'member') %> participating, <%= c.registered_members %> registered<br/>
-                        <strong><%= number_to_currency c.total_prize_money, precision: 0 %> for <%= platform_display c %></strong><br>
-                        Tags: <%= technology_tag_links(c) %>
-                        <table class="type <%= c.challenge_type.downcase %>"><tr><td><%= raw(challenge_type_label(c.challenge_type.upcase)) %></td></tr></table>
+            <% if @challenges.empty? %>
+                <p style="text-align:center;font-weight:bold">No open challenges found matching your criteria.</p>
+            <% else %>
+                <% @challenges.in_groups_of(2, false) do |row_challenges| %>
+                <div class="row-fluid">
+                <% for c in row_challenges %>                
+                    <div class="span6">
+                        <div class="challenge well well-large">
+                            <h3><%= link_to c.name, challenge_path(c)  %></h3>
+                            Due in <%= pluralize(c.days_till_close, 'day') %><br>
+                            <%= pluralize(c.participating_members, 'member') %> participating, <%= c.registered_members %> registered<br/>
+                            <strong><%= number_to_currency c.total_prize_money, precision: 0 %> for <%= platform_display c %></strong><br>
+                            Tags: <%= technology_tag_links(c) %>
+                            <table class="type <%= c.challenge_type.downcase %>"><tr><td><%= raw(challenge_type_label(c.challenge_type.upcase)) %></td></tr></table>
+                        </div>
                     </div>
+                <% end %> 
                 </div>
-            <% end %> 
-            </div>
+                <% end %>
+                <%= link_to "Subscribe to the feed for this set of challenges", challenges_path(filters: params[:filters], format: "rss"), class: "rss" %>
             <% end %>
 
-
-        <%= link_to "Subscribe to the feed for this set of challenges", challenges_path(filters: params[:filters], format: "rss"), class: "rss" %>
 
     </div> <!-- /.container -->
 </div><!-- /.loginbar-wrapper -->
