tweaks for participants

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -88,7 +88,6 @@
               <li<% if @challenges_tick %> class="active"<% end %>><%= link_to 'CHALLENGES', main_app.challenges_path %></li>
               <li<% if @leaderboard_tick %> class="active"<% end %>><%= link_to 'LEADERBOARD', main_app.leaderboard_path %></li>
               <li><%= link_to 'BADGES', '/badges' %></li>
-              <li><%= link_to 'FAQ', '/faq' %></li>
               <li><%= link_to 'BLOG', 'http://blog.cloudspokes.com' %></li>
               <li><%= link_to 'HELP', '/help' %></li>
               <li<% if @forums_tick %> class="active"<% end %>><%= link_to 'FORUMS', '/forums' %></li>
@@ -147,21 +146,21 @@
 
               <div class="pull-right">
                   <ul class="links">
-                      <li><a href="https://plus.google.com/u/1/communities/115902133021389200378" class="circle-orange"><span class="googleplus-small">google+</span></a></li>
-                      <li><a href="http://www.facebook.com/CloudSpokes" class="circle-orange"><span class="facebook">facebook</span></a></li>
-                      <li><a href="https://twitter.com/cloudspokes" class="circle-orange"><span class="twitter">twitter</span></a></li>
-                      <li><a href="http://www.linkedin.com/groups/CloudSpokes-3876560" class="circle-orange"><span class="linkedin">linkedin</span></a></li>
+                      <li><a href="https://plus.google.com/u/1/communities/115902133021389200378" class="circle-orange" target="_blank"><span class="googleplus-small">google+</span></a></li>
+                      <li><a href="http://www.facebook.com/CloudSpokes" class="circle-orange" target="_blank"><span class="facebook">facebook</span></a></li>
+                      <li><a href="https://twitter.com/cloudspokes" class="circle-orange" target="_blank"><span class="twitter">twitter</span></a></li>
+                      <li><a href="http://www.linkedin.com/groups/CloudSpokes-3876560" class="circle-orange" target="_blank"><span class="linkedin">linkedin</span></a></li>
                   </ul>
               </div>
 
               <div class="span3 pull-right">
                   <h2>PLATFORMS</h2>
                   <ul class="links">
-                      <li><a href="http://aws.amazon.com">Amazon Web Services</a></li>
-                      <li><a href="http://www.cloudfoundry.com">Cloud Foundry</a></li>
-                      <li><a href="https://cloud.google.com">Google App Engine</a></li>
-                      <li><a href="http://www.heroku.com">Heroku</a></li>
-                      <li><a href="http://developer.force.com">Salesforce & Force.com</a></li>
+                      <li><a href="http://aws.amazon.com" target="_blank">Amazon Web Services</a></li>
+                      <li><a href="http://www.cloudfoundry.com" target="_blank">Cloud Foundry</a></li>
+                      <li><a href="https://cloud.google.com" target="_blank">Google App Engine</a></li>
+                      <li><a href="http://www.heroku.com" target="_blank">Heroku</a></li>
+                      <li><a href="http://developer.force.com" target="_blank">Force.com</a></li>
                   </ul>
               </div>
 
