--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Cloudspokes</title>
+    <title>CloudSpokes</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
+    <link rel="shortcut icon" type="image/x-icon" href="/assets/favicon.ico" />
 
     <%= include_gon %>
     <!-- styles -->
