added code to rotate banners

--- a/app/views/refinery/pages/home.html.erb
+++ b/app/views/refinery/pages/home.html.erb
@@ -3,14 +3,14 @@
 <div class="banner">
     <div class="container">
         <div class="banner-unit crowdsouced-banner custumer-res res">
-            <img src="/assets/banner/crowdsourced.jpg" alt=""/>
+            <img src="/assets/banner/<%= ['crowdsourced','connect-with-cloud'].sample %>.jpg" alt=""/>
             <div class="buttons">
                 <a class="get-started" href="/contact"><span><span>GET STARTED</span></span></a>
                 <a class="learn-more" href="/how-it-works">Or Learn More</a>
             </div>
         </div>
         <div class="banner-unit compete-code-win-banner hide member-res res">
-            <img src="/assets/banner/compete-code-win.jpg" alt=""/>
+            <img src="/assets/banner/<%= ['build-it-a','build-it-b','compete-code-win'].sample %>.jpg" alt=""/>
             <div class="buttons">
                 <a class="get-started" href="#register-modal" data-toggle="modal"><span><span>GET STARTED</span></span></a>
                 <a class="learn-more" href="/how-it-works-members">Or Learn More</a>
