do not show title if blank

--- a/app/views/refinery/pages/show.html.erb
+++ b/app/views/refinery/pages/show.html.erb
@@ -5,7 +5,7 @@
         <div class="container">
 
             <div>
-                <div class="title"><h1><%= @page.browser_title.upcase %></h1></div>
+                <% unless @page.browser_title.empty? %><div class="title"><h1><%= @page.browser_title.upcase %></h1></div><% end %>
                 <%= raw @page.content_for(:body) %>
             </div>
 
