--- a/app/views/members/community.html.erb
+++ b/app/views/members/community.html.erb
@@ -110,7 +110,7 @@
         <div class="row-fluid">
             <div class="span6">
                 <div class="title"><h1 class="rss">PRESS</h1></div>
-                <%= render :partial => "shared/feed_items", :locals => { :items => @press_feed_items } %>
+                <%= render :partial => "shared/feed_items", :locals => { :items => @news_feed_items } %>
             </div>
 
             <div class="span6">
