started on submissions

--- a/app/views/members/community.html.erb
+++ b/app/views/members/community.html.erb
@@ -109,7 +109,7 @@
 
         <div class="row-fluid">
             <div class="span6">
-                <div class="title"><h1 class="rss">PRESS</h1></div>
+                <div class="title"><h1 class="rss">NEWS</h1></div>
                 <%= render :partial => "shared/feed_items", :locals => { :items => @news_feed_items } %>
             </div>
 
