--- a/app/views/accounts/public_profile.html.haml
+++ b/app/views/accounts/public_profile.html.haml
@@ -41,11 +41,11 @@
       .control-group
         %label.control-label Facebook Url
         .controls
-          = text_field_tag "account[facebook]", @member.facebook, class: "input"
+          = text_field_tag "account[facebook]", @member.facebook, class: "input-xxlarge"
       .control-group
         %label.control-label Linkedin Url
         .controls
-          = text_field_tag "account[linkedin]", @member.linkedin, class: "input"
+          = text_field_tag "account[linkedin]", @member.linkedin, class: "input-xxlarge"
 
       .controls-row
         .control-group
