--- a/app/views/users/passwords/unlock.html.erb
+++ b/app/views/users/passwords/unlock.html.erb
@@ -21,7 +21,7 @@
 					<div style="padding-bottom: 50px"></div>
 
           <a href="/users/confirmation/new">Didn&#x27;t receive confirmation instructions?</a><br />
-          <a href="/users/unlock/new">Didn&#x27;t receive unlock instructions?</a><br />    
+          <!-- add unlock instructions link -->
 
       </div>
 
