--- a/app/views/members/community.html.erb
+++ b/app/views/members/community.html.erb
@@ -65,8 +65,9 @@
                     <table class="type featured"><tr><td><%= number_to_currency(@stats['featured_member_money'], :precision => 0) %></td></tr></table>
                 </div>
 
-                <p>Quisque luctus neque id mi pretium faucibus. Integer ipsum sem, luctus ut tempus vel, eleifend a arcu. <a href="#">Morbi pretium</a>, nulla ut porta vestibulum, turpis enim venenatis massa, id volutpat velit metus non urna.</p>
-                <p>Etiam placerat nisi eu arcu pretium at <a href="#">venenatis lectus vestibulum</a>. Cras gravida massa a nibh condimentum viverra. Vestibulum commodo nisi nec felis rhoncus id porttitor orci eleifend. Aenean facilisis quam ut lectus lobortis euismod.</p>
+                <p><a href="/members/parasquid">Parasquid</a> has been a member of CloudSpokes since early summer 2012, but didn't really start participating until November when he laid eyes on our "Rebuild our CloudSpokes site in Rails" challenge and won 1st place.</p>
+
+                <p>In the 3+ months he's been actively participating, parasquid's racked up 8 1st wins and $5,500 bucks! The submissions keep rolling in and the cash and wins keep piling up for Tristan and that's what makes him our February '13 Member of the Month.</p>
             </div>
             <div class="span6">
                 <div class="title"><h1>LEADERBOARD</h1></div>
